# greybeard

./: .gitignore  README.md  pyproject.toml
greybeard/: __init__.py  chat_engine.py  cli.py  context_loader.py  diff_engine.py
greybeard/models/: change_model.py
greybeard/storage/: journal.py  suggestion_store.py
tests/: test_chat_engine.py  test_models.py  test_suggestion_store.py
