[tool.poetry]
name = "greybeard"
version = "0.1.0"
description = "Terminal-native AI assistant for infrastructure engineers"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "greybeard" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "^0.12.0"
rich = "^13.0.0"
openai = "^1.0.0"

[tool.poetry.scripts]
greybeard = "greybeard.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipython = "^9.2.0"
ipdb = "^0.13.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
